Fix overflow issue on finder window

--- a/src/components/windows/FinderWindow/stylesheet.scss
+++ b/src/components/windows/FinderWindow/stylesheet.scss
@@ -127,6 +127,7 @@
 
     &.panel-list {
       width: auto;
+      flex: 1;
     }
   }
 }
